<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="editViewModel"
            type="com.droid.offlineStorage.ui.edit.EditViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/activity_edit_etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/label_title"
                    android:text="@={editViewModel.inputTitle}"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="2"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:gravity="bottom"
                    android:text="@={editViewModel.inputDescription}"
                    android:hint="@string/label_description"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null" />


                <Button
                    android:id="@+id/activity_edit_btEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_save"
                    android:onClick="@{()->editViewModel.saveAndUpdate()}"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</layout>
